src/test/ui/issues/issue-20225.stderr
error[E0053]: method `call` has an incompatible type for trait
  --> $DIR/issue-20225.rs:6:3
   |
LL | impl<'a, T> Fn<(&'a T,)> for Foo {
   |          - this type parameter
LL |   extern "rust-call" fn call(&self, (_,): (T,)) {}
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&T`, found type parameter `T`
   |
   = note: expected fn pointer `extern "rust-call" fn(&Foo, (&'a T,))`
              found fn pointer `extern "rust-call" fn(&Foo, (T,))`
   = help: type parameters must be constrained to match other types
   = note: for more information, visit https://doc.rust-lang.org/book/ch10-02-traits.html#traits-as-parameters

error[E0053]: method `call_mut` has an incompatible type for trait
  --> $DIR/issue-20225.rs:11:3
   |
LL | impl<'a, T> FnMut<(&'a T,)> for Foo {
   |          - this type parameter
LL |   extern "rust-call" fn call_mut(&mut self, (_,): (T,)) {}
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&T`, found type parameter `T`
   |
   = note: expected fn pointer `extern "rust-call" fn(&mut Foo, (&'a T,))`
              found fn pointer `extern "rust-call" fn(&mut Foo, (T,))`
   = help: type parameters must be constrained to match other types
   = note: for more information, visit https://doc.rust-lang.org/book/ch10-02-traits.html#traits-as-parameters

error[E0053]: method `call_once` has an incompatible type for trait
  --> $DIR/issue-20225.rs:18:3
   |
LL | impl<'a, T> FnOnce<(&'a T,)> for Foo {
   |          - this type parameter
...
LL |   extern "rust-call" fn call_once(self, (_,): (T,)) {}
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&T`, found type parameter `T`
   |
   = note: expected fn pointer `extern "rust-call" fn(Foo, (&'a T,))`
              found fn pointer `extern "rust-call" fn(Foo, (T,))`
   = help: type parameters must be constrained to match other types
   = note: for more information, visit https://doc.rust-lang.org/book/ch10-02-traits.html#traits-as-parameters

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0053`.
